--- a/training/04_edit_eml_in_R.Rmd
+++ b/training/04_edit_eml_in_R.Rmd
@@ -32,7 +32,7 @@ This chapter is a practical tutorial for using R to read, edit, write, and valid
 ```{r, child = '../workflows/edit_eml/set_parties.Rmd'}
 ```
 
-## Validate your EML and update the data package
+## Validate EML and update package
 
 To make sure that your edited EML is valid against the EML schema, run `eml_validate` on your EML. Fix any errors that you see, and then save your EML to a path of your choice or a temp file. You will later pass this path as an argument to update the package.
 
@@ -90,19 +90,19 @@ qa_package <- function(node, pid, readAllData = TRUE,
 ```
 
 By default, `qa_package` checks for:
-- Correctness of distribution URLs for each data object (URLs must match the EML physical section for the object)
-- Congruence of metadata and data 
 
-The `check_creators` and `check_access` flags can be set to `TRUE` to check: 
-- Correctness of ORCIDs of creators in a given EML
-- Rights and access are set for creators for a give pid sysmeta
+* Correctness of distribution URLs for each data object (URLs must match the EML physical section for the object)
+* Congruence of metadata and data
 
-In most cases, QA package will be run just by passing in a member node and the resource map pid.
+The `check_creators` and `check_access` flags can be set to `TRUE` to check:
+
+* Correctness of ORCIDs of creators in a given EML
+* Rights and access are set for creators in the system metadata
+
+In most cases, `qa_package` will be run just by passing in a member node and the resource map PID.
 ```{r, eval=FALSE}
 qa_package(mn, resource_map_pid)
 ```
-
-Note that there are some issues with the function that are documented [here](https://github.com/NCEAS/datamgmt/issues/145). 
 
 ## Exercise 3 {.exercise}
 * Make sure your package from [before](#exercise-2) is loaded into R.
@@ -110,5 +110,3 @@ Note that there are some issues with the function that are documented [here](htt
 * Then write, validate, and update your package.
 * Use the [checklist](https://nceas.github.io/datateam-training/reference/final-checklist-before-notifying-submitter-pi.html) to review your submission.
 * Make edits where necessary, and publish updates as needed.
- 
- 
