--- a/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
@@ -34,7 +34,7 @@
  
 > Your methods section appears to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section. We require that comprehensive methods information be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
 
-> Your submitted data files are in excel format. Please convert your files to a plain text/csv (or other open source format) in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.  We can keep your excel files in the dataset, however we recommend at least one version of each file be stored in an open format.
+> Your submitted data files are in excel format. Please convert your files to a plain text/csv or another open (non-proprietary) format in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.  We can keep your excel files in the dataset, however we recommend at least one version of each file be stored in an open format.
  
 > Please add attribute (column) metadata for your data files.  If any files share the same attributes you only need to enter them once and we will replicate them to the files.  You can add this by navigating to your dataset [INSERT URL], clicking the green “Edit” button, clicking the “Describe” button located to the right of each of your files at the top of the submission page, and in the window that pops up click over to the “Attributes” tab.
 
