added details for title and abstract standards

--- a/workflows/datateam_miscellaneous/adc_checklist.Rmd
+++ b/workflows/datateam_miscellaneous/adc_checklist.Rmd
@@ -1,9 +1,9 @@
 ## Final checklist before notifying submitter (PI)
 
 - **Descriptive title:** what, where, when - provides enough information to understand the contents at a general scientific level (please use sentence case so that only the first word and proper nouns are capitalized, as in a journal article title; do not add a period at the end, it will auto-populate). Be sure to fully spell out all terms and avoid abbreviations, initialisms, or acronyms unless they are only generally known as such.
-    - Ex: "Active layer soil bulk density, moisture, carbon and nitrogen concentrations, and stable isotope data from borehole sites, Toolik Lake Field Station, 2015"
+    - Ex: "Active layer soil bulk density, moisture, carbon and nitrogen concentrations, and stable isotope data from borehole sites, Toolik Lake Field Station, Alaska, 2015"
 
-- **Descriptive abstract:** specifies purpose, data collected, and other applicable information (&#8805;100 words) - provides an overview of the scientific context/project/hypotheses, how the data set fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents
+- **Descriptive abstract:** specifies purpose, data collected, and other applicable information (&#8805;100 words) - provides an overview of the scientific context/project/hypotheses, how the data set fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. Lean towards defining all abbreviations, initialisms, or acronyms unless they are only generally known as such.
 
     Bad example:
 
