added timecard instructions

--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -33,6 +33,8 @@ description: "This is a training guide and reference resource for NCEAS data tea
 * Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Dom, Jeanette, or Jesse in Slack
 * GitHub - if you do not have a public GitHub account already, please register for one [here](https://github.com/join?source=header-home)
 * [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118) - fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
+* [Electronic Timekeeping](https://timekeeping.ucsb.edu/) - make sure you can log on to electronic timekeeping 
+via your UCSBNetID and password.  Log your hours for you first day! Under today's date select 'Hours Worked' under Pay Code column and enter the amount of hours you worked under the Amount column and click Save in the top right. At the end of every two-week pay period you need to click the 'Approve Timecard' button in order to submit your timecard.  [Detailed instructions](https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf)
 
 
 ## NCEAS Events {-}
